--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Kapumota",
+    "name": "IvanUrbanoDev",
     "dockerFile": "Dockerfile",
     "context": "..",
     "remoteUser": "kapumota",
